my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ECYCLICTRAIT/ECYCLICTRAIT.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECYCLICTRAIT.dml:17:17: error ECYCLICTEMPLATE: cyclic template inheritance
